fix mobile spacing for media-text block

--- a/style.css
+++ b/style.css
@@ -1340,6 +1340,12 @@ footer p {
   }
 }
 
+@media only screen and (max-width: 600px) {
+  .wp-block-media-text.has-media-on-the-right .wp-block-media-text__content{
+    margin-bottom: calc(var(--cntnt-spacing) / 2);
+  }
+}
+
 @media only screen and (min-width: 600px) and (max-width: 767px) {
   .zigzag .content {
     flex-basis: 65%!important;
